Bug 1914178 - Handle empty sized contents as valid targtes for CSS scroll snap. r=emilio

Also this change treats edge cases
(e.g. snappedPort.x == target.mSnapArea.XMost()) as valid, I think it would be
better results.

Differential Revision: https://phabricator.services.mozilla.com/D221566